src/objects/Activity__c.object
<CustomObject>
    <fields>
        <fullName>Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment</label>
        <referenceTo>Assessment__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_AF__c</fullName>
        <label>AF</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_AS_Number__c</fullName>
        <label>AS Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Activity_Number__c</fullName>
        <label>Activity Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Visit</fullName>
                </value>
                <value>
                    <fullName>Drop-by Visit</fullName>
                </value>
                <value>
                    <fullName>Other Site Visit</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>W/Transportation</fullName>
                </value>
                <value>
                    <fullName>School Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Activity__c</fullName>
        <label>Activity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Adult_1_involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adult 1 involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adult 2 involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Agency__c</fullName>
        <label>Agency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_AuxActivity__c</fullName>
        <label>AuxActivity</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Baby_Info__c</fullName>
        <label>Baby Info</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Baby_Present__c</fullName>
        <label>Baby Present</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Barriers__c</fullName>
        <label>Barriers</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Body_Builders_Acc__c</fullName>
        <label>Body Builders Acc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Body_Builders_Anch__c</fullName>
        <label>Body Builders Anch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Body_Builders_F__c</fullName>
        <label>Body Builders F</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Body_Builders_O__c</fullName>
        <label>Body Builders O</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Brain_Builders_Acc__c</fullName>
        <label>Brain Builders Acc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Brain_Builders_Anch__c</fullName>
        <label>Brain Builders Anch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Brain_Builders_F__c</fullName>
        <label>Brain Builders F</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Brain_Builders_O__c</fullName>
        <label>Brain Builders O</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Breast_Feeding__c</fullName>
        <label>Breast Feeding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_CPCS_Create_Date__c</fullName>
        <label>Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_CPCS_Detail__c</fullName>
        <label>Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BRI_CPCS_EBP__c</fullName>
        <label>EBP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Parenting</fullName>
                </value>
                <value>
                    <fullName>Common Sense Parenting</fullName>
                </value>
                <value>
                    <fullName>Motivational Interviewing</fullName>
                </value>
                <value>
                    <fullName>Nurturing Parent</fullName>
                </value>
                <value>
                    <fullName>Parent As Teachers</fullName>
                </value>
                <value>
                    <fullName>Period of PURPLE Crying</fullName>
                </value>
                <value>
                    <fullName>S.T.E.P Program</fullName>
                </value>
                <value>
                    <fullName>Strengthening Families</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_CPCS_End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_CPCS_End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_CPCS_MileageTotal__c</fullName>
        <formula>BRI_CPCS_Odometer_End__c  -  BRI_CPCS_Odometer_Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MileageTotal</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_CPCS_Odometer_End__c</fullName>
        <label>Odometer End</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_CPCS_Odometer_Start__c</fullName>
        <label>Odometer Start</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_CPCS_OtherEBP__c</fullName>
        <label>OtherEBP</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BRI_CPCS_Referral_Number__c</fullName>
        <label>Referral Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_CPCS_Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_CPCS_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Not Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Car_Accident__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Car Accident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activities of Daily Living</fullName>
                </value>
                <value>
                    <fullName>Child care</fullName>
                </value>
                <value>
                    <fullName>Dental/Vision/Hearing</fullName>
                </value>
                <value>
                    <fullName>Domestic Violence Services</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Emergency Assistance</fullName>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Family Issues</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Food/Nutrition</fullName>
                </value>
                <value>
                    <fullName>Legal Service Resourcing</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Other Support Needs</fullName>
                </value>
                <value>
                    <fullName>Primary Healthcare</fullName>
                </value>
                <value>
                    <fullName>Public Aid Resourcing</fullName>
                </value>
                <value>
                    <fullName>Respite Care</fullName>
                </value>
                <value>
                    <fullName>Substance Abuse</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Char_Builders_Acc__c</fullName>
        <label>Char Builders Acc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Char_Builders_Anch__c</fullName>
        <label>Char Builders Anch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Char_Builders_F__c</fullName>
        <label>Char Builders F</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Char_Builders_O__c</fullName>
        <label>Char Builders O</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Cheers_Memo__c</fullName>
        <label>Cheers Memo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Child_Injuryw_Med_Treatment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Child Injuryw Med Treatment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Child_Number__c</fullName>
        <label>Child Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_CoSleeping__c</fullName>
        <label>CoSleeping</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Community_Service__c</fullName>
        <label>Community Service</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Contingency_Plan__c</fullName>
        <label>Contingency Plan</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_ContraindicationReason__c</fullName>
        <label>ContraindicationReason</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Criminal_Activity_Risk__c</fullName>
        <label>Criminal Activity Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Criminal_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Criminal Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Cues__c</fullName>
        <label>Cues</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Curriculum_Lesson2__c</fullName>
        <label>Curriculum Lesson2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Curriculum_Lesson__c</fullName>
        <label>Curriculum Lesson</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Curriculum_Name2__c</fullName>
        <label>Curriculum Name2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Curriculum_Name__c</fullName>
        <label>Curriculum Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Curriculum_Sub_Lesson2__c</fullName>
        <label>Curriculum Sub Lesson2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Curriculum_Sub_Lesson__c</fullName>
        <label>Curriculum Sub Lesson</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Curriculum_Used__c</fullName>
        <label>Curriculum Used</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Custody_Conflicts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custody Conflicts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_DCS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DCS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Date_Discontinue_BF__c</fullName>
        <label>Date Discontinue BF</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_Date__c</fullName>
        <label>Visit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_Death__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Death</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Discharge_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discharge Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Discuss_Safety_Problem__c</fullName>
        <label>Discuss Safety Problem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Domestic_Adult_Violence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domestic / Adult Violence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Duration__c</fullName>
        <formula>(BRI_User_Time_Conclude__c  -  BRI_User_Time_Begin__c)*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_ER_Contact_Name__c</fullName>
        <label>ER Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_ER_Visit_Date__c</fullName>
        <label>ER Visit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_ER_Visit_Reason__c</fullName>
        <label>ER Visit Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_ER_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ER Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_E_Parenting_Acc__c</fullName>
        <label>E Parenting Acc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_E_Parenting_Anch__c</fullName>
        <label>E Parenting Anch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_E_Parenting_F__c</fullName>
        <label>E Parenting F</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_E_Parenting_O__c</fullName>
        <label>E Parenting O</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Empathy__c</fullName>
        <label>Empathy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Expression__c</fullName>
        <label>Expression</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_FAW_CR__c</fullName>
        <label>FAW CR</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_FAW_Memo__c</fullName>
        <label>FAW Memo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BRI_FAW__c</fullName>
        <label>FAW</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_FN_County_Code__c</fullName>
        <label>FN County Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_FN_County_Family_Resides__c</fullName>
        <label>FN County Family Resides</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_FN_Program_Within_County__c</fullName>
        <label>FN Program Within County</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_FOB_Not_Adult_2_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FOB Not Adult 2 Involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_FSC_related__c</fullName>
        <label>FSC related</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_FSWCR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FSW</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HomeVisits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_FSW_CR__c</fullName>
        <label>FSW CR</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_FSW__c</fullName>
        <label>FSW</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Family_Member_Involved__c</fullName>
        <label>Family Member Involved</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Family_Number_CR__c</fullName>
        <label>Family Number CR</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Family_level_1__c</fullName>
        <label>Family level 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Fire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Fob_Present__c</fullName>
        <label>Fob Present</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Four_Step_Acc__c</fullName>
        <label>Four Step Acc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Four_Step_Anch__c</fullName>
        <label>Four Step Anch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Four_Step_F__c</fullName>
        <label>Four Step F</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Four_Step_O__c</fullName>
        <label>Four Step O</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Friend_Present__c</fullName>
        <label>Friend Present</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Funding_Source__c</fullName>
        <label>Funding Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Goal_1__c</fullName>
        <label>Goal 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Goal_2__c</fullName>
        <label>Goal 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Goal_3__c</fullName>
        <label>Goal 3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Goal_Created_Date__c</fullName>
        <label>Goal Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_Goal_Final_Review_Date__c</fullName>
        <label>Goal Final Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_Goal_Key_word__c</fullName>
        <label>Goal Key word</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>